// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test add script attribute show script attribute group for add show all unused ones 1`] = `
<article
  className="wonder-inspector-scriptAttribute"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Attribute Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-attribute"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script attribute asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script Attribute
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="scriptAttribute-fields"
        />
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script attribute
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Add Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test change script attribute show script attribute group for change should contain self and all unused ones 1`] = `
<article
  className="wonder-inspector-scriptAttribute"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Attribute Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-attribute"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script attribute asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script Attribute
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="scriptAttribute-fields"
        />
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script attribute
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test change script attribute test change script attribute group should be sorted 1`] = `
<article
  className="wonder-inspector-scriptAttribute"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Attribute Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-attribute"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script attribute asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script Attribute 1
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="scriptAttribute-fields"
        />
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script attribute
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 2
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test script attribute field show attribute's fields 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-attribute"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Attribute
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script attribute asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script Attribute
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="scriptAttribute-fields"
          >
            <div
              className="scriptAttribute-field"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                  title="New Script Attribute Field"
                >
                  New Script Attribute Field
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test script attribute field test set field's defaultValue test show attribute's fields 1`] = `
<article
  className="wonder-inspector-script"
>
  <article
    className="wonder-inspector-scriptFunction"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Function Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script event function
        </button>
      </div>
    </div>
  </article>
  <article
    className="wonder-inspector-scriptAttribute"
  >
    <div
      className="inspector-component"
    >
      <div
        className="component-title"
        title="MeshRenderer"
      >
        Script Attribute Group
      </div>
      <hr />
      <div
        className="component-content"
      >
        <div
          className="wonder-script-attribute"
        >
          <div
            className="component-header"
          >
            <div
              className="header-title"
            >
              Script Attribute
            </div>
            <div
              className="header-close"
            >
              <img
                onClick={[Function]}
                src="./public/img/close.png"
              />
            </div>
          </div>
          <div
            className="inspector-item"
          >
            <div
              className="item-header"
              title="script attribute asset in use"
            >
              Name
            </div>
            <div
              className="item-content"
            >
              <div
                className="inspector-select"
              >
                <div
                  className="select-name"
                  onClick={[Function]}
                >
                  New Script Attribute
                </div>
                <div
                  className="select-img"
                  onClick={[Function]}
                >
                  <img
                    src="./public/img/select.png"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="scriptAttribute-fields"
          >
            <div
              className="scriptAttribute-field"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                  title="New Script Attribute Field"
                >
                  New Script Attribute Field
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1.1"
                  />
                </div>
              </article>
            </div>
          </div>
        </div>
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add script attribute
        </button>
      </div>
    </div>
  </article>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test add script event function show script event function group for add show all unused ones 1`] = `
<article
  className="wonder-inspector-scriptFunction"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Function Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-function"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Function
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script event function asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script EventFunction
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script event function
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Add Script Event Function
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test change script event function show script event function group for change should contain self and all unused ones 1`] = `
<article
  className="wonder-inspector-scriptFunction"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Function Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-function"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Function
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script event function asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script EventFunction
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script event function
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Event Function
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test change script event function test change script event function group should be sorted 1`] = `
<article
  className="wonder-inspector-scriptFunction"
>
  <div
    className="inspector-component"
  >
    <div
      className="component-title"
      title="MeshRenderer"
    >
      Script Function Group
    </div>
    <hr />
    <div
      className="component-content"
    >
      <div
        className="wonder-script-function"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Script Function
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
            title="script event function asset in use"
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
                onClick={[Function]}
              >
                New Script EventFunction 1
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="addable-btn"
        onClick={[Function]}
      >
        Add script event function
      </button>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Event Function
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 2
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;
